// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic formfield 1`] = `
<div
  class="form-group"
>
  <label
    class="col-sm-3 control-label"
    for="test"
  />
  <div
    class="col-sm-9"
  >
    <input
      id="test"
      readonly=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`basic label 1`] = `
<label
  class="col-sm-3 control-label"
  for="test"
/>
`;

exports[`boolean error message 1`] = `
<div
  class="form-group has-error"
>
  <label
    class="col-sm-3 control-label"
    for="test"
  />
  <div
    class="col-sm-9"
  >
    <input
      id="test"
      readonly=""
      type="text"
      value=""
    />
    <span
      class="help-block"
    >
      Error
    </span>
  </div>
</div>
`;

exports[`node error message 1`] = `
<div
  class="form-group has-error"
>
  <label
    class="col-sm-3 control-label"
    for="test"
  />
  <div
    class="col-sm-9"
  >
    <input
      id="test"
      readonly=""
      type="text"
      value=""
    />
    <span
      class="help-block"
    >
      <span>
        lorem ipsum
      </span>
    </span>
  </div>
</div>
`;

exports[`string error message 1`] = `
<div
  class="form-group has-error"
>
  <label
    class="col-sm-3 control-label"
    for="test"
  />
  <div
    class="col-sm-9"
  >
    <input
      id="test"
      readonly=""
      type="text"
      value=""
    />
    <span
      class="help-block"
    >
      lorem ipsum
    </span>
  </div>
</div>
`;
